[package]
name = "pico-args-helpgen"
version = "0.1.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>", "Ernest Gupik"]
edition = "2018"
keywords = ["args", "cli"]
license = "MIT"
description = "Fork of pico-args with clap like help generation."
repository = "https://github.com/Ernest1338/pico-args-helpgen"
documentation = "https://docs.rs/pico-args-helpgen/"
readme = "README.md"
exclude = ["test-apps/**"]

[features]
default = []
eq-separator = []
combined-flags = []
short-space-opt = []
